@@ -1,5 +1,13 @@
 2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/test/test_mpegts.py:
+	* flumotion/test/test_ts_segmenter.py:
+	Use min/max keyframe distance
+	* po/Makefile.in.in (deleted):
+	Delete autogenerated file
+
+2010-01-12  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/component/muxers/mpegts/mpegts.py:
 	check megtsmux version check and fix warning message
 	* po/es.po:
